<resources>
    <string name="app_name">MoodLights</string>
    <string name="moodlight_frequency_label">Frequency Slider</string>
    <string name="moodlight_previous_content_description">Go to previous song</string>
    <string name="moodlight_next_content_description">Go to next song</string>
    <string name="moodlight_toggle_play_pause_description">Toggle between play and pause</string>
    <string name="moodlight_press_bridge_title">Please press your hue bridge</string>
    <string name="moodlight_press_bridge_description">In order to connect to hue lights we need to enable the application to connect to your hue bridge.  To do this you need to click the center button of your bridge and immediately hit continue.  If you cancel, the app will not function until you re-open and accept.  If you hit continue and the app doesn\'t function, make sure your hue bridge is connected to the same wifi network as your phone.  If errors keep happening please file a bug.</string>
    <string name="moodlight_press_bridge_continue">Continue</string>
    <string name="moodlight_press_bridge_cancel">Cancel</string>
    <string name="moodlight_saved_bridge_cleared_title">Saved Bridge Cleared</string>
    <string name="moodlight_saved_bridge_cleared_description">If you would like to re-connect to a bridge, please fully close and re-open the app.</string>
    <string name="moodlight_saved_bridge_cleared_ok">Okay</string>
    <string name="moodlight_reset_bridge_button">Reset Hue</string>
    <string name="moodlight_reset_bridge_title">Are you sure?</string>
    <string name="moodlight_reset_brdige_description">Are you sure you would like to reset hue settings? You will need to re-sync this app with your bridge. You will also need to shut down your lights manually. Resetting is helpful when you want to connect to a different bridge.</string>
    <string name="moodlight_reset_bridge_reset">Reset</string>
    <string name="moodlight_reset_bridge_cancel">Cancel</string>
    <string name="moodlight_could_not_find_spotify_title">Could not find spotify</string>
    <string name="moodlight_could_not_find_spotify_description">This app requires spotify to be downloaded on your device.  Please download spotify and re-open the app.</string>
    <string name="moodlight_could_not_find_spotify_go_to_download">Go to download</string>
    <string name="moodlight_could_not_find_spotify_exit">Exit</string>
    <string name="moodlight_spotify_auth_fail_title">App not authorized</string>
    <string name="moodlight_spotify_auth_fail_description">Spotify authorization was declined, please re-open the app and authorize this app to access spotify.</string>
    <string name="moodlight_spotify_auth_fail_exit">Exit</string>
    <string name="moodlight_spotify_auth_fail_cancel">Cancel</string>
    <string name="moodlight_spotify_login_fail_title">Not logged in to spotify</string>
    <string name="moodlight_spotify_login_fail_description">No logged in user found for spotify.  Please login to spotify and re-open the app</string>
    <string name="moodlight_spotify_login_fail_exit">Exit</string>
    <string name="moodlight_spotify_login_fail_cancel">Cancel</string>
</resources>